# WebServerRS

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml
postgresql/: pg_hba.conf  postgresql.conf
postgresql/initdb/: 001_init.sql
scripts/unix/linux/: install-gitleaks.sh
src/: config.rs  db.rs  main.rs  swagger_doc.rs
src/handlers/: db.rs  index.rs  mod.rs
