[package]
name = "webserver_rs"
version = "0.0.1"
description = ""
edition = "2024"
authors = ["Masina Elliot <masina.elliot@hotmail.fr>"]
readme = "README.md"
license-file = "LICENSE.md"
homepage = "https://github.com/bobis33/WebServerRS#readme"
repository = "https://github.com/bobis33/WebServerRS"
documentation = "https://bobis33.github.io/WebServerRS/webserver_rs/"
keywords = ["rendering", "engine", "graphics", "rust", "vulkan"]
exclude = [".gitignore", ".editorconfig", "target/*", "tests/*", ".github/*"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE.md", "SECURITY.md"]
publish = false

[dependencies]
actix-web = "4.12.1"
env_logger = "0.11.8"
log = "0.4.29"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "macros"] }

utoipa = { version = "5.4.0", features = ["actix_extras"], optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"], optional = true }

[features]
default = ["swagger"]
swagger = ["utoipa", "utoipa-swagger-ui"]

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
